# SparrowDB

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-stress.sh
.agents/: rust-build-resolver.md  rust-reviewer.md  silent-failure-hunter.md  sparrow-perf-profiler.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/commands/: rust-build.md  rust-review.md  rust-test.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bench.yml  cli.yml  cli_tests.yml  clippy_check.yml  db_tests.yml  dev_instance_tests.yml  hql_tests.yml  macos-x64-quickfix.yml  production_db_tests.yml  sparrow-cli-tests.yml  sparrow-db-tests.yml  sparrow-memory-tests.yml  ts-sdk.yml
crates/sparrow-benches/: Cargo.toml  README.md  llms.txt
crates/sparrow-benches/baselines/compiler_analyze/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/compiler_full/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/compiler_parse/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/traversal_n_from_type_medium/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/traversal_n_from_type_small/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/traversal_out_node_medium/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/traversal_out_node_small/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/write_pipeline_deserialize/1/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/write_pipeline_deserialize/100/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/write_pipeline_deserialize/1000/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/write_pipeline_deserialize/10000/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/write_pipeline_serialize/1/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/write_pipeline_serialize/100/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/write_pipeline_serialize/1000/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/baselines/write_pipeline_serialize/10000/main/: benchmark.json  estimates.json  sample.json  tukey.json
crates/sparrow-benches/benches/: compiler.rs  traversal.rs  write_pipeline.rs
crates/sparrow-benches/src/: lib.rs
crates/sparrow-chef/: Cargo.toml  README.md
crates/sparrow-cli/: CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh
crates/sparrow-cli/src/: config.rs  docker.rs  errors.rs  github_issue.rs  lib.rs  main.rs  metrics_sender.rs  project.rs  prompts.rs  update.rs  utils.rs
crates/sparrow-cli/src/commands/: add.rs  auth.rs  build.rs  check.rs  compile.rs  config.rs  dashboard.rs  delete.rs  doctor.rs  export.rs  feedback.rs  import.rs  init.rs  migrate.rs  mod.rs  prune.rs  push.rs  restart.rs  run.rs  start.rs  status.rs  stop.rs  update.rs  upgrade.rs  workspace_flow.rs
crates/sparrow-cli/src/commands/integrations/: ecr.rs  mod.rs
crates/sparrow-cli/src/commands/logs/: log_source.rs  mod.rs  tui.rs
crates/sparrow-cli/src/tests/: check_tests.rs  data_tests.rs  docker_tests.rs  lifecycle_tests.rs  mod.rs  test_utils.rs  utility_tests.rs
crates/sparrow-cli/tests/: check_tests.rs  compile_tests.rs  data_tests.rs  docker_tests.rs  init_tests.rs  lifecycle_tests.rs  project_tests.rs  run_tests.rs  test_utils.rs  utility_tests.rs
crates/sparrow-container/: CLAUDE.md  Cargo.toml  README.md
crates/sparrow-container/src/: main.rs  queries.rs
crates/sparrow-core/: CLAUDE.md  Cargo.toml  README.md
crates/sparrow-macros/: CLAUDE.md  Cargo.toml  README.md
crates/sparrow-macros/src/: lib.rs
crates/sparrow-macros/tests/: macro_tests.rs
crates/sparrow-memory/: Cargo.toml  README.md
crates/sparrow-memory/src/: graph.rs  lib.rs  store.rs  types.rs
crates/sparrow-memory/tests/: integration.rs
crates/sparrow-metrics/: Cargo.toml  README.md
crates/sparrow-studio/: Cargo.toml  build.rs
crates/sparrow-studio/src/: embed.rs  handler.rs  lib.rs
docs/: HQL.md  HTTP_API.md  README.md  ROADMAP.md  V1_COMPAT_ENDPOINT.md  auth.md  import.md  llms.txt
docs/bugs/: general.md  gql.md  grammar.md  parser.md
docs/skills/: debugging.md  migration.md  querying.md  setup.md
docs/superpowers/: known-issues.md
helix-cli/src/: config.rs  docker.rs  lib.rs  main.rs
helix-container/: Cargo.toml
helix-db/: Cargo.toml
hql-tests/src/: main.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
scripts/: post-build-sweep.sh
scripts/hooks/: cargo-panic-extractor.sh  rust-async-guard.sh  rust-check-on-edit.sh  rust-fmt-on-edit.sh
sdks/rust/: CLAUDE.md  Cargo.toml  README.md
sdks/ts/: README.md  package-lock.json  package.json
sparrow-cli/: Cargo.toml
sparrow-cli/src/: cleanup.rs  config.rs  docker.rs  errors.rs  github_issue.rs  lib.rs  main.rs  metrics_sender.rs  project.rs  prompts.rs  utils.rs
sparrow-container/: Cargo.toml
sparrow-container/src/: main.rs  queries.rs
sparrow-db/: Cargo.toml
sparrow-db/benches/: bm25_benches.rs  hnsw_benches.rs
sparrow-db/tests/: capacity_optimization_benches.rs
sparrow-macros/: Cargo.toml
sparrow-memory/: Cargo.toml
sparrow-sdk/: Cargo.toml  README.md  sparrowdb-sdk-llm.txt
sparrow-sdk/src/: dsl.rs  lib.rs
sparrowdb-chef/: Cargo.toml
sparrowdb-chef/src/: lib.rs  main.rs
sparrowdb-chef/src/tests/: docker_tests.rs  http_tests.rs  parser_tests.rs  template_tests.rs
tests/: test-runtime-eval.sh  test-stress.sh
(+477 files in other folders)
