[workspace]
members = [
    "sparrow-db",
    "sparrow-container",
    "sparrow-macros",
    "sparrow-cli",
    "hql-tests",
    "metrics",
    "sparrow-memory",
    "sparrowdb-chef",
    "sparrow-sdk",
]
resolver = "2"

[profile.release]
opt-level = 2
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.dev]
opt-level = 0
codegen-units = 16
lto = false
panic = "abort"
incremental = true
debug = 1
