[workspace]
members = [
    "crates/sparrow-core",
    "crates/sparrow-container",
    "crates/sparrow-macros",
    "crates/sparrow-cli",
    "crates/sparrow-metrics",
    "crates/sparrow-memory",
    "crates/sparrow-chef",
    "crates/sparrow-studio",
    "sdks/rust",
    "tests/hql-tests",
]
resolver = "2"

[profile.release]
opt-level = 2
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.dev]
opt-level = 0
codegen-units = 16
lto = false
panic = "abort"
incremental = true
debug = 1
