[package]
name = "sparrowdb-chef"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sparrowdb-chef"
path = "src/main.rs"

[lib]
name = "sparrowdb_chef"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
color-eyre = "0.6"
cliclack = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dirs-next = "2.0"
open = "5"

[dev-dependencies]
tempfile = "3"
