[package]
name = "sparrow-benches"
version = "0.1.0"
edition = "2024"
publish = false
description = "CPU and (future) HTTP performance benchmarks for SparrowDB"

[lib]
name = "sparrow_benches"
path = "src/lib.rs"

[features]
# cpu: default — criterion benchmarks, no live DB, no network
cpu = []
# http: future — adds sparrow-sdk + HTTP client for live endpoint benchmarks
http = []
default = ["cpu"]

[dependencies]
sparrow-core = { path = "../sparrow-core", features = ["lmdb", "bench"] }
tempfile = "3"
rand = "0.9"
bumpalo = { version = "3", features = ["collections"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
