[package]
name = "sparrow-container"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
sparrow-core = { path = "../sparrow-core", default-features = false }
sparrow-macros = { path = "../sparrow-macros" }

inventory = "0.3.16"
rand = "0.9.1"
dirs = "5.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sonic-rs = "0.5.7"
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
uuid = { version = "1.12.1", features = ["std", "v4", "v6", "fast-rng"] }
async-trait = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
dotenvy = "0.15.7"
bumpalo = "3.19.0"

[features]
default = ["lmdb", "studio"]
studio = ["sparrow-core/studio"]
lmdb = ["sparrow-core/lmdb"]
dev = ["sparrow-core/dev-instance", "studio"]
production = ["sparrow-core/production"]
