[package]
name = "sparrow-macros"
version = "0.1.7"
edition = "2024"
authors = ["SparrowDB Team"]
publish = false
repository = "https://github.com/YOUR_ORG/SparrowDB"
license = "AGPL-3.0"
description = "Proc macros for SparrowDB"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
dirs = "5.0.1"

[dev-dependencies]
trybuild = "1.0"

[features]
debug-output = []
default = []

