[package]
name = "sparrow-memory"
version = "0.1.0"
edition = "2024"
description = "Lightweight episodic memory for research agents, backed by SparrowDB."
publish = false

[dependencies]
sparrow-core = { path = "../sparrow-core", default-features = false, features = ["lmdb", "vectors"] }
bumpalo = { version = "3.19.0", features = ["collections", "boxed"] }
bincode = "1.3.3"
uuid = { version = "1.12.1", features = ["v4", "v6", "fast-rng"] }
heed3 = { version = "0.22.0" }
thiserror = "2.0.12"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
tempfile = "3.20.0"
